@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-17T00:55:57Z",
-  "count" : 2,
+  "timestamp" : "2022-06-30T08:16:15Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
