@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-30T00:59:40Z",
+  "timestamp" : "2022-06-30T08:16:15Z",
   "count_outdated" : 367,
   "uniques_outdated" : 198,
-  "count" : 389,
+  "count" : 388,
   "uniques" : 211,
   "clones" : [
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
