@@ -1,3 +1,10 @@
+2022-06-30T08:16:15Z:
+* notice: last 14d: unq all: 1 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 198 367 / 211 389
+* notice: next accum: outdated-unq outdated-all / unq all: 198 367 / 211 388
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-06-16]
+
 2022-06-30T00:59:40Z:
 * notice: last 14d: unq all: 1 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 197 365 / 211 387
